# TPPSD

./: .bashrc_TPPSD  .gitignore  CMakeLists.txt  TPPSD.code-workspace  partitions.csv  sdkconfig  sdkconfig.old
TPPSD_components/TPPSD_nvs/: CMakeLists.txt  TPPSD_nvs.c
TPPSD_components/TPPSD_nvs/include/: TPPSD_nvs.h
TPPSD_components/TPPSD_spiffs/: CMakeLists.txt  TPPSD_spiffs.c
TPPSD_components/TPPSD_spiffs/include/: TPPSD_spiffs.h
components/aes_256_cbc/: CMakeLists.txt  aes_256_cbc.c
components/aes_256_cbc/include/: aes_256_cbc.h
components/enc_storage/: CMakeLists.txt  enc_storage.c
components/enc_storage/include/: enc_storage.h
components/i80_st7789_panel/: CMakeLists.txt  i80_st7789_panel.c
components/rotary_encoder/: CMakeLists.txt  idf_component.yml  rotary_encoder.c
components/salt_table/: CMakeLists.txt  salt_table.c
components/usb_keyboard/: CMakeLists.txt  idf_component.yml  usb_keyboard.c
components/usb_msc/: CMakeLists.txt  usb_msc.c
main/: CMakeLists.txt  idf_component.yml  main.c  main.h  product_config.h
main/images/: generate_icon.c  insert_icon.c  settings_icon.c  show_icon.c  usb.c
main/screens/: insert_passwords.c  insert_passwords.h  main_menu.c  main_menu.h  register.c  register.h  show_passwords.c  show_passwords.h
main/screens/insert_passwords_screen/: insert_passwords_screen.c  insert_passwords_screen.h
main/screens/main_menu_screen/: main_menu_screen.c  main_menu_screen.h
main/screens/register_screen/: register_screen.c  register_screen.h
main/screens/settings_screen/: settings_screen.c  settings_screen.h
main/screens/show_passwords_screen/: show_passwords_screen.c  show_passwords_screen.h
main/tasks/fetch_passwords_task/: fetch_passwords_task.c  fetch_passwords_task.h
main/tasks/lvgl_task/: lvgl_task.c  lvgl_task.h
main/tasks/usb_keyboard_task/: usb_keyboard_task.c  usb_keyboard_task.h
main/usb_msc/: usb_msc.c  usb_msc.h
(+5 files in other folders)
